--- a/src/ui/Placeholder.css
+++ b/src/ui/Placeholder.css
@@ -20,9 +20,5 @@
   white-space: nowrap;
   display: inline-block;
   pointer-events: none;
-}
-@media (max-width: 1025px) {
-  .Placeholder__root {
-    left: 8px;
-  }
+  font-family: Arial, Helvetica, sans-serif;
 }
