--- a/src/EditorComposer.css
+++ b/src/EditorComposer.css
@@ -913,6 +913,10 @@
    position: relative;
    user-select: none;
  }
+
+ .editor-shell span.editor-image > *:first-child {
+   line-height: 0;
+ }
  
  .editor-shell .editor-image img {
    max-width: 100%;
@@ -939,10 +943,6 @@
  
  .editor-shell .editor-image .image-caption-container {
    display: block;
-   position: absolute;
-   bottom: 4px;
-   left: 0;
-   right: 0;
    padding: 0;
    margin: 0;
    border-top: 1px solid #fff;
