--- a/src/nodes/ImageNode.css
+++ b/src/nodes/ImageNode.css
@@ -22,6 +22,11 @@
   width: calc(100% - 20px);
   white-space: pre-wrap;
   word-break: break-word;
+  text-align: center;
+}
+
+.ImageNode__contentEditable > p {
+  text-align: center;
 }
 
 .ImageNode__placeholder {
@@ -30,12 +35,13 @@
   overflow: hidden;
   position: absolute;
   text-overflow: ellipsis;
-  top: 10px;
-  left: 10px;
+  bottom: 10px;
   user-select: none;
   white-space: nowrap;
   display: inline-block;
   pointer-events: none;
+  width: 100%;
+  text-align: center;
 }
 
 .image-control-wrapper--resizing {
