--- a/src/EditorComposer.css
+++ b/src/EditorComposer.css
@@ -677,7 +677,7 @@
    color: red;
  }
  
- .dropdown {
+ .caprte-dropdown {
    z-index: 100;
    display: block;
    position: fixed;
@@ -688,7 +688,7 @@
    background-color: #fff;
  }
  
- .dropdown .item {
+ .caprte-dropdown .item {
    margin: 0 8px 0 8px;
    padding: 8px;
    color: #050505;
@@ -707,38 +707,38 @@
    min-width: 100px;
  }
  
- .dropdown .item.fontsize-item,
- .dropdown .item.fontsize-item .text {
+ .caprte-dropdown .item.fontsize-item,
+ .caprte-dropdown .item.fontsize-item .text {
    min-width: 70px;
  }
  
- .dropdown .item .active {
+ .caprte-dropdown .item .active {
    display: flex;
    width: 20px;
    height: 20px;
    background-size: contain;
  }
  
- .dropdown .item:first-child {
+ .caprte-dropdown .item:first-child {
    margin-top: 8px;
  }
  
- .dropdown .item:last-child {
+ .caprte-dropdown .item:last-child {
    margin-bottom: 8px;
  }
  
- .dropdown .item:hover {
+ .caprte-dropdown .item:hover {
    background-color: #eee;
  }
  
- .dropdown .item .text {
+ .caprte-dropdown .item .text {
    display: flex;
    line-height: 20px;
    flex-grow: 1;
    min-width: 150px;
  }
  
- .dropdown .item .icon {
+ .caprte-dropdown .item .icon {
    display: flex;
    width: 20px;
    height: 20px;
@@ -750,7 +750,7 @@
    background-repeat: no-repeat;
  }
  
- .dropdown .divider {
+ .caprte-dropdown .divider {
    width: auto;
    background-color: #eee;
    margin: 4px 8px;
@@ -758,15 +758,15 @@
  }
  
  @media screen and (max-width: 1100px) {
-   .dropdown-button-text {
+   .caprte-dropdown-button-text {
      display: none !important;
    }
    /*
-   .font-size .dropdown-button-text {
+   .font-size .caprte-dropdown-button-text {
      display: flex !important;
    }
    */
-   .code-language .dropdown-button-text {
+   .code-language .caprte-dropdown-button-text {
      display: flex !important;
    }
  }
@@ -1670,11 +1670,11 @@
    opacity: 0.6;
  }
  
- button.item.dropdown-item-active {
+ button.item.caprte-dropdown-item-active {
    background-color: rgba(223, 232, 250, 0.3);
  }
  
- button.item.dropdown-item-active i {
+ button.item.caprte-dropdown-item-active i {
    opacity: 1;
  }
  
@@ -1736,7 +1736,7 @@
    }
  }
  
- .dialog-dropdown {
+ .dialog-caprte-dropdown {
    background-color: #eee !important;
    margin-bottom: 10px;
    width: 100%;
