--- a/src/themes/PlaygroundEditorTheme.css
+++ b/src/themes/PlaygroundEditorTheme.css
@@ -14,6 +14,8 @@
 }
 .PlaygroundEditorTheme__paragraph {
   margin: 0;
+  margin-bottom: 0.1rem;
+  line-height: 1.5;
   position: relative;
 }
 .PlaygroundEditorTheme__quote {
