Fix margin bottom in dropdown for table

--- a/src/EditorComposer.css
+++ b/src/EditorComposer.css
@@ -403,6 +403,10 @@
    mask-size: contain;
    -webkit-mask-size: contain;
  }
+
+ .caprte-dropdown .table {
+  margin-bottom: 0;
+ }
  
  i.image {
    background-image: url(images/icons/file-image.svg);
