--- a/src/themes/PlaygroundEditorTheme.css
+++ b/src/themes/PlaygroundEditorTheme.css
@@ -441,3 +441,19 @@
   border: 1px dashed #ddd;
   padding: 8px 16px;
 }
+
+/* Math */
+
+.PlaygroundEditorTheme__math {
+  display: inline-flex;
+  max-width: 100%;
+}
+
+.PlaygroundEditorTheme__math>.ML__mathlive {
+  user-select: auto;
+}
+
+.PlaygroundEditorTheme__paragraph:has(> .PlaygroundEditorTheme__math):hover {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
