--- a/src/ui/Modal.css
+++ b/src/ui/Modal.css
@@ -19,7 +19,7 @@
   right: 0px;
   background-color: rgba(40, 40, 40, 0.6);
   flex-grow: 0;
-  flex-shrink: 1px;
+  flex-shrink: 1;
   z-index: 200;
 }
 .Modal__modal {
