--- a/src/ui/Modal.css
+++ b/src/ui/Modal.css
@@ -33,6 +33,8 @@
   position: relative;
   box-shadow: 0 0 20px 0 #444;
   border-radius: 10px;
+  overflow-x: auto;
+  max-width: calc(100% - 40px);
 }
 .Modal__title {
   color: #444;
