--- a/src/ui/Modal.css
+++ b/src/ui/Modal.css
@@ -18,8 +18,8 @@
   left: 0px;
   right: 0px;
   background-color: rgba(40, 40, 40, 0.6);
-  flex-grow: 0px;
-  flex-shrink: 1px;
+  flex-grow: 0;
+  flex-shrink: 1;
   z-index: 200;
 }
 .Modal__modal {
@@ -27,12 +27,14 @@
   min-height: 100px;
   min-width: 300px;
   display: flex;
-  flex-grow: 0px;
+  flex-grow: 0;
   background-color: #fff;
   flex-direction: column;
   position: relative;
   box-shadow: 0 0 20px 0 #444;
   border-radius: 10px;
+  overflow-x: auto;
+  max-width: calc(100% - 40px);
 }
 .Modal__title {
   color: #444;
