--- a/src/themes/PlaygroundEditorTheme.css
+++ b/src/themes/PlaygroundEditorTheme.css
@@ -74,10 +74,12 @@
   vertical-align: super;
 }
 .PlaygroundEditorTheme__textCode {
-  background-color: rgb(240, 242, 245);
-  padding: 1px 0.25rem;
+  background-color: rgba(175, 184, 193, 0.2);
+  padding: 0.2em 0.4em;
   font-family: Menlo, Consolas, Monaco, monospace;
-  font-size: 94%;
+  font-size: 90%;
+  color: rgb(31, 35, 40);
+  border-radius: 6px;
 }
 .PlaygroundEditorTheme__hashtag {
   background-color: rgba(88, 144, 255, 0.15);
